--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
 	<div id="description"> Give recommendations to your friends, or find recommendations sent by friends.</div>
 	<div id="nav">
 		<ul>
-			<li><a href="/give"> GIVE </a></li>
-			<li><a href="/find"> FIND </a></li>
+			<li><a href="/give"> GIVE BEANS </a></li>
+			<li><a href="/find"> COLLECTED BEANS </a></li>
 		</ul>
 	</div>
 </body>
@@ -48,14 +48,6 @@
 		font-size: 400%;
 		margin-top: 0px;
 		margin-bottom: 7%;
-	}
-
-	button {
-		padding: 0px;
-		border: none;
-		
-		
-		
 	}
 
 	ul {
