following design specs

--- a/give.html
+++ b/give.html
@@ -55,11 +55,13 @@
 			  <span class="glyphicon glyphicon-search"></span> 
 			  <input type="text" name="business" placeholder="Search Business" id="business">
 			</button><br>
-
-					<img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px">
-
-					<b>Alice Liu</b><br>
-					Level: Magic Beans
+					<div class="row">
+					  <div class="col-xs-2"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
+					  <div class="col-md-8">
+					  	<b>Alice Liu</b><br>
+							Level: Magic Beans
+						</div>
+					</div>
 
 			<input type="text" name="comment" placeholder="Comment"> <br>
 			
