--- a/give.html
+++ b/give.html
@@ -63,6 +63,8 @@
 						</div>
 					</div>
 
+			<div id="picture"></div>
+
 			<input type="text" name="comment" placeholder="Comment"> <br>
 			
 		</div>
@@ -80,7 +82,40 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 <script>
 	$("#business").autocomplete({
-      source: {{venue_names}}
+      source: function (request, response) { 
+                    $.ajax({ 
+                        type: "POST", 
+                        contentType: "application/json; charset=utf-8", 
+                        url: "/autocomplete_yelp", 
+                        dataType: "json", 
+                        data: "{'q':'" + request.term + "'}", 
+                        success: function (data) { 
+                                response($.map(data, function (item) { 
+                                    return { 
+                                        label: item.name, 
+                                        value: item.id 
+                                    } 
+                                })) 
+                        } 
+                    }); 
+                },
+      select: function(event, ui) {
+        if(ui.item) {
+          $.ajax({ 
+              type: "POST", 
+              contentType: "application/json; charset=utf-8", 
+              url: "/autocomplete_yelp_picture", 
+              dataType: "json", 
+              data: "{'id':'" + ui.item.value + "'}", 
+              success: function (data) {
+              		if (data.image_url) {
+              			$('#picture')[0].innerHTML = '<img id="theImg" src=' + data.image_url + ' />';
+              		}
+              }
+          	});
+          ui.item.value = ui.item.label;
+        }
+    	}
     });
 
 	$("#friends").autocomplete({
