back button on bottom

--- a/find.html
+++ b/find.html
@@ -61,9 +61,9 @@
     </div>
   {% endfor %}
   <div class="footer"> 
-    <button type="button" name="next" class="next">
-      <span class="glyphicon glyphicon-chevron-right"></span> 
-    </button> <br>
+    <button type="button" name="back" class="back" onClick="history.go(-1);return true;">
+      <span class="glyphicon glyphicon-chevron-left"></span> 
+    </button>
   </div>
 </body>
 </html>
