--- a/give.html
+++ b/give.html
@@ -57,6 +57,9 @@
 		</div>
 	</form>
 	<div class="footer"> 
+		<button type="button" name="back" class="back">
+			<span class="glyphicon glyphicon-chevron-left"></span> 
+		</button>
 		<button type="button" name="next" class="next">
 			<span class="glyphicon glyphicon-chevron-right"></span> 
 		</button> <br>
@@ -114,10 +117,21 @@
       source: {{friends}}
     });
 
-	$("#next").click(function() {
-
+	var status = 0;
+	$(".next").click(function() {
+		status = 1;
 		$("#friend-page").show()
 		$("#comment-page").hide()
+	})
+
+	$(".back").click(function() {
+		if (status == 0) {
+			history.go(-1);
+			return true;
+		}
+		status = 0;
+		$("#friend-page").hide()
+		$("#comment-page").show()
 	})
 </script>
 </html>
