--- a/give.html
+++ b/give.html
@@ -20,6 +20,19 @@
 			margin: 5%;
 		}
 
+		textarea {
+			width: 100%;
+		}
+
+		input[type="checkbox"] {
+			text-align: right;
+		}
+
+		.expand {
+			width: 100%;
+			text-align: left;
+		}
+
     </style>
 </head>
 <body>
@@ -46,20 +59,46 @@
 
 			<div id="picture"></div>
 
-			<input type="text" name="comment" placeholder="Comment"> <br>
+			<textarea name="comment" placeholder="Comment"> </textarea><br>
 			
 			<span class="glyphicon glyphicon-camera"></span>  
 			
 		</div>
 		<div id="friend-page">
-			<button type="button" class="btn btn-default btn-sm">
+			<button type="button" class="btn btn-default btn-sm search">
 			  <span class="glyphicon glyphicon-search"></span> 
-			  <input type="text" name="friends" placeholder="Search Friends" id="friends"> 
+			  <input type="text" name="friends" placeholder="Search Friends" id="friends" ></button><br>
+
+			<b>Groups</b><br>
+			<button type="button" class="btn btn-default btn-sm expand">
+			  <span class="glyphicon glyphicon-chevron-up"></span> 
+			  Foodies <input type="checkbox" name="foodies" value="Foodies"><br>
+			</button><br>
+			
+			<button type="button" class="btn btn-default btn-sm expand">
+			  <span class="glyphicon glyphicon-chevron-up"></span> 
+			  Cafe Study Buddies <input type="checkbox" name="foodies" value="Foodies"><br>
+			</button><br>
+			
+			<button type="button" class="btn btn-default btn-sm expand">
+			  <span class="glyphicon glyphicon-chevron-up"></span> 
+			  Poor College Kidzz <input type="checkbox" name="foodies" value="Foodies"><br>
+
+			<div class="toggle expand">
+				Nicole Won <input type="checkbox" name="foodies" value="Foodies"><br>
+				Kevin Casey <input type="checkbox" name="foodies" value="Foodies"><br>
+			</div>
+			</button><br>
+
+			<b>Friends</b><br>
+			Nicole Won <input type="checkbox" name="foodies" value="Foodies"><br>
+			Kevin Casey <input type="checkbox" name="foodies" value="Foodies"><br>
+
 			<button type="submit"> Send </button>
 		</div>
 	</form>
 	<div class="footer"> 
-		<button type="button" name="next" class="next">
+		<button type="button" name="next" class="next" id="next">
 			<span class="glyphicon glyphicon-chevron-right"></span> 
 		</button> <br>
 	</div>
@@ -68,7 +107,12 @@
 <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 <script>
-	$("#friend-page").hide()
+	$("#friend-page").hide();
+	$(".toggle").hide();
+
+	$(".expand").click(function() {
+		$(".toggle").toggle();
+	});
 
 	$("#business").autocomplete({
       source: function (request, response) { 
