--- a/give.html
+++ b/give.html
@@ -35,6 +35,7 @@
 			</button><br>
 			<div id="categories"></div>
 			<div id="picture"></div>
+			<div id="custom_picture"><img id="custom_image" src="" style="width: 100px;"></div>
 					<div class="row">
 					  <div class="col-xs-2"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
 					  <div class="col-md-8">
@@ -46,7 +47,13 @@
 
 			<input type="text" name="comment" placeholder="Comment"> <br>
 			
-			<span class="glyphicon glyphicon-camera"></span>  
+			<div class="image-upload">
+			    <label for="file-input">
+			        <span class="glyphicon glyphicon-camera"></span>
+			    </label>
+
+			    <input id="file-input" type="file"/>
+			</div>
 			
 		</div>
 		<div id="friend-page">
@@ -69,7 +76,24 @@
 <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 <script>
-	$("#friend-page").hide()
+	$("#friend-page").hide();
+	$("#file-input").hide();
+	function readURL(input) {
+
+	    if (input.files && input.files[0]) {
+	        var reader = new FileReader();
+
+	        reader.onload = function (e) {
+	            $('#custom_image').attr('src', e.target.result);
+	        }
+
+	        reader.readAsDataURL(input.files[0]);
+	    }
+	}
+
+	$("#file-input").change(function(){
+	    readURL(this);
+	});
 
 	$("#business").autocomplete({
       source: function (request, response) { 
@@ -132,6 +156,6 @@
 		status = 0;
 		$("#friend-page").hide()
 		$("#comment-page").show()
-	})
+	});
 </script>
 </html>
