--- a/give.html
+++ b/give.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="UTF-8">
     <title>Cool Beans</title>
@@ -48,13 +49,13 @@
 			</button><br>
 			<div id="categories"></div>
 			<div id="picture"></div>
-					<div class="row">
-					  <div class="col-xs-2"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
-					  <div class="col-md-8">
-					  	<b>Alice Liu</b><br>
-							Level: Magic Beans
-						</div>
-					</div>
+			<div class="row">
+			  <div class="col-xs-2"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
+			  <div class="col-md-8 profile">
+			  	<b>Alice Liu</b><br>
+					Level: Magic Beans
+			  </div>
+			</div>
 
 
 			<textarea name="comment" placeholder="Comment"> </textarea><br>
