--- a/give.html
+++ b/give.html
@@ -52,11 +52,11 @@
 
 			<div id="custom_picture"><img id="custom_image" src="" style="width: 100px;"></div>
 					<div class="row">
-					  <div class="col-xs-2"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
-					  <div class="col-md-8">
+					  <div class="col-xs-3"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
+					  <div class="col-xs-8">
 					  	<b>Alice Liu</b><br>
 							Level: Magic Beans
-						</div>
+					  </div>
 					</div>
 
 			<textarea name="comment" placeholder="Comment"> </textarea><br>
