share and heart icons

--- a/detail.html
+++ b/detail.html
@@ -11,5 +11,7 @@
   {{recommendation.business_name}} - {{recommendation.category}}
 
   <a href="{{recommendation.yelp_url}}" target="_blank">Yelp</a>
+  <br>
+  {{recommendation.comment}}
 </body>
 </html>
