--- a/landing.html
+++ b/landing.html
@@ -12,9 +12,9 @@
 			text-align: center;
 			color: white;
 		}
-		img {
+		#bean {
 			position: relative;
-			top: 66px;
+			top: 26px;
 			right: -50px;
 		}
 		.tagline {
@@ -22,10 +22,10 @@
 		}
 		h1 {
 			font-size: 400%;
+			margin:0px;
 		}
 		form {
 			font-size: 70%;
-			margin: 5%;
 		}
 		input[type="email"] {
 			width: 280px;
@@ -45,16 +45,21 @@
 			border: none;
 			margin: 10px;
 		}
+		#heroshot {
+			width: 50%;
+		}
 	</style>
 </head>
 <body>
 	<img src="/static/bean.png" id="bean" width="60px">
 	<h1> COOLBEANS </h1>
 	<div class="tagline"> Helping users and small businesses leverage word of month. </div>
+	<img src="/static/heroshot.png" id="heroshot">
 	<form>
 		<input type="email" class="form-control" name="email" placeholder="mrbean@coolbeans.com"> <br>
 		<button type="submit">SIGN UP FOR BETA</button> <br>
 		</div>
 	</form>
+	
 </body>
 </html>
