--- a/landing.html
+++ b/landing.html
@@ -11,10 +11,14 @@
 			background-color: coral; /* Standard syntax */	
 			text-align: center;
 			color: white;
+			margin: 0px;
+		}
+		html {
+			padding: 0px;
 		}
 		#bean {
 			position: relative;
-			top: 26px;
+			top: 66px;
 			right: -50px;
 		}
 		.tagline {
@@ -22,7 +26,7 @@
 		}
 		h1 {
 			font-size: 400%;
-			margin:0px;
+			margin-bottom:0px;
 		}
 		form {
 			font-size: 70%;
@@ -49,7 +53,9 @@
 			width: 50%;
 		}
 		.flash {
-			background: green;
+			background: white;
+			color: black;
+			float: top;
 		}
 	</style>
 </head>
@@ -64,6 +70,5 @@
 		<button type="submit">SIGN UP FOR BETA</button> <br>
 		</div>
 	</form>
-	
 </body>
 </html>
