--- a/give.html
+++ b/give.html
@@ -4,23 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Cool Beans</title>
-    <link href="/static/base.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="/static/base.css" rel="stylesheet" type="text/css">
     <style>
-    	html {
-    		padding: 0px;
+		.searchbox {
+			width: 89%;
+			text-align: left;
 		}
-
-		body {
-			padding: 0px;
-			margin: 0px;
-			margin-top: 20%;
-		}
-
-		form {
-			margin: 5%;
-		}
-
 		textarea {
 			width: 100%;
 		}
@@ -41,7 +31,7 @@
 			height: 10%;
 		}
 
-		#picture {
+		#picture, #custom_picture {
 			height: 5%;
 			overflow: hidden;
 			text-align: center;
@@ -50,6 +40,31 @@
 		#categories {
 			text-align: center;
 		}
+
+		#location {
+			border: none;
+			background-color: white;
+		}
+
+		.img_container {
+	        float: left;
+	        display: inline-block;
+	        margin-right: 10px;
+	    }
+
+	    .profile {
+	        width: 80%;
+	        display: inline-block;
+	    }
+
+	    .comment {
+	    	padding-left: 10px;
+	    	padding-right: 10px;
+	    }
+
+	    #business {
+	    	width: 100%;
+	    }
 
     </style>
 </head>
@@ -62,33 +77,43 @@
 	</div>
 	<form method="post">
 		<div id="comment-page">
-			<button type="button" class="btn btn-default btn-sm search">
-			  <span class="glyphicon glyphicon-search"></span> 
-			  <input type="text" name="business" placeholder="Search Business" id="business" class="search">
-			  <span class="glyphicon glyphicon-map-marker">
-			</button><br>
+			<div class="search_bar_container">
+				<span id="search_container">
+			      <button type="button" class="btn btn-default btn-sm searchbox">
+			        <span class="glyphicon glyphicon-search"></span> 
+			        <input type="text" name="business" placeholder="Search Businesses" id="business" class="search">
+			      </button>
+			    </span>
+			    <button id="location">
+			    	<span class="glyphicon glyphicon-map-marker">
+			    </button>
+			</div>
 
 			<input type="hidden" name="business_id" id="business_id">
 			<input type="hidden" name="categories_string" id="categories_input">
 			<div id="categories"></div>
 			<div id="picture"></div>
 
-			<div id="custom_picture"><img id="custom_image" src="" style="width: 100px;"></div>
-					<div class="row">
-					  <div class="col-xs-3"><img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
-					  <div class="col-xs-9">
-					  	<b>Alice Liu</b><br>
-							Level: Magic Beans
-					  </div>
-					</div>
+			<div class="comment">
+				<div>
+				  <div class="img_container">
+				  	<img src="https://lh6.ggpht.com/_ljlgBmVDW-mpu1AsLSAfLW0ErxNqFwpxowvsssjSqbEl2kXWUC0tX4Af5uQSiydVY4=w300" width="50px" height="50px"></div>
+				  <div class="profile">
+				  	<b>Alice Liu</b><br>
+						Level: Magic Beans
+				  </div>
+				</div>
+				<textarea name="comment" placeholder="Comment"> </textarea><br>
+			</div>
 
-			<textarea name="comment" placeholder="Comment"> </textarea><br>
+			<div id="custom_picture">
+				<img id="custom_image" src="" style="width: 100px;">
+			</div>
 			
 			<div class="image-upload">
 			    <label for="file-input">
 			        <span class="glyphicon glyphicon-camera"></span>
 			    </label>
-
 			    <input id="file-input" type="file"/>
 			</div>
 			
