--- a/home.html
+++ b/home.html
@@ -31,13 +31,12 @@
 
 	#bean {
 		position: relative;
-		top: 25px;
+		top: 66px;
 		right: -10px;
 	}
 
 	h1 {
 		font-size: 400%;
-		margin-top: 0px;
 		margin-bottom: 7%;
 		font-weight: 400;
 		color: white;
@@ -55,7 +54,7 @@
     	display: block;
     	color: coral;
     	padding: 15%;
-    	margin-top: 7%;
+    	margin: 7%;
     }
 
     html {
