--- a/find.html
+++ b/find.html
@@ -152,12 +152,12 @@
   $('#list_toggle').click(function() {
     $('#list_view').show();
     $('#map_view').hide();
-    $('#search_bar_container').show();
+    $('.search_bar_container').show();
   });
   $('#compass_container').click(function() {
     $('#list_view').hide();
     $('#map_view').show();
-    $('#search_bar_container').hide();
+    $('.search_bar_container').hide();
   });
 </script>
 </html>
